gcc/testsuite/rust/rustc/ui/span/non-existing-module-import.rs
use std::bar::{foo1, foo2}; // { dg-error ".E0432." "" { target *-*-* } }

fn main() {}

